# ShadeTripTxt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
shadetriptxt/: __init__.py
shadetriptxt/text_anonymizer/: README_CLI.md  README_Config.md  README_Parameters.md  README_TextAnonymizer.md  README_anonymization_guide.md  __init__.py  cli.py  config.py  text_anonymizer.py
shadetriptxt/text_anonymizer/examples/: Jenkinsfile  cli_example.py  config_example.py  custom_masking.py  dataframe_privacy.py  dict_records.py  full_pipeline.py  multi_locale.py  test_anonymizer.py  text_strategies.py
shadetriptxt/text_dummy/: README.md  README_CLI.md  README_Config.md  __init__.py  cli.py  config.py  text_dummy.py
shadetriptxt/text_matcher/: README.md  README_CLI.md  README_Config.md  README_Normalization.md  README_TextMatcher_Integration.md  __init__.py  algorithm_selector.py  cli.py  config.py  config_example.py  match_result.py  ml_similarity_adapter.py  text_matcher.py
shadetriptxt/text_parser/: README.md  README_CLI.md  README_Config.md  README_EncodingFixer.md  README_Normalization.md  README_TextParser_Technical_Reference.md  __init__.py  cli.py  cli_example.py  config.py  encoding_fixer.py  english_parser.py  french_parser.py  german_parser.py  idcard_parser.py  italian_parser.py  language_normalizer.py  names_parser.py  portuguese_parser.py  spanish_parser.py  text_extract.py  text_normalizer.py  text_parser.py  text_readability.py
shadetriptxt/utils/: __init__.py  _locale.py  cli_base.py  similarity_engines.py  string_ops.py  string_similarity.py  string_validation.py
tests/: test_language_normalizer.py  test_string_ops.py  test_string_ops_core.py  test_string_similarity_core.py  test_string_similarity_phonetic.py  test_string_validation.py  test_text_anonymizer.py  test_text_dummy.py  test_text_matcher.py  test_text_normalizer.py  test_text_parser.py  test_text_readability.py
(+30 files in other folders)
