[project]
name = "shadetriptxt"
version = "0.0.2"
description = "A Python library for text validation and data cleaning"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "DatamanEdge" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "flashtext>=2.7",
    "faker>=20.0.0",
]

[project.scripts]
shadetriptxt-parser = "shadetriptxt.text_parser.cli:main"
shadetriptxt-matcher = "shadetriptxt.text_matcher.cli:main"
shadetriptxt-anonymizer = "shadetriptxt.text_anonymizer.cli:main"
shadetriptxt-dummy = "shadetriptxt.text_dummy.cli:main"

[project.urls]
Homepage = "https://github.com/jrodriguezgar/ShadeTripTxt"
Repository = "https://github.com/jrodriguezgar/ShadeTripTxt"
Issues = "https://github.com/jrodriguezgar/ShadeTripTxt/issues"
Changelog = "https://github.com/jrodriguezgar/ShadeTripTxt/blob/main/CHANGELOG.md"

[project.optional-dependencies]
anonymizer = [
    "spacy>=3.5.0",
    "nltk>=3.8.0",
    "python-anonymity>=0.0.1",
    "pycanon>=1.0.0",
    "pandas>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shadetriptxt"]

[tool.ruff]
target-version = "py310"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"shadetriptxt/text_parser/names_parser.py" = ["E701", "E501"]
"shadetriptxt/text_parser/*_parser.py" = ["E501"]
"shadetriptxt/text_matcher/text_matcher.py" = ["E501"]
"shadetriptxt/utils/string_ops.py" = ["E501"]
"tests/*.py" = ["E402"]
